force-app/main/default/objects/ffct__Bundle_Provision_State__c/fields/ffct__Access_Token__c.field-meta.xml
<CustomField>
    <fullName>ffct__Access_Token__c</fullName>
    <label>Access Token</label>
    <type>TextArea</type>
</CustomField>