force-app/main/default/objects/ffct__Bundle_Provision_State__c/fields/ffct__Async_Id__c.field-meta.xml
<CustomField>
    <fullName>ffct__Async_Id__c</fullName>
    <label>Async Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>