force-app/main/default/objects/ffct__Bundle_Provision_State__c/fields/ffct__Complete__c.field-meta.xml
<CustomField>
    <fullName>ffct__Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>