force-app/main/default/objects/ffct__Bundle_Provision_State__c/fields/ffct__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>ffct__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>