force-app/main/default/objects/ffct__Bundle_Provision_State__c/fields/ffct__FolderId__c.field-meta.xml
<CustomField>
    <fullName>ffct__FolderId__c</fullName>
    <label>FolderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>