force-app/main/default/objects/ffct__Bundle_Provision_State__c/fields/ffct__Instance_URL__c.field-meta.xml
<CustomField>
    <fullName>ffct__Instance_URL__c</fullName>
    <label>Instance URL</label>
    <type>Url</type>
</CustomField>