force-app/main/default/objects/ffct__Bundle_Provision_State__c/fields/ffct__IsAPICall__c.field-meta.xml
<CustomField>
    <fullName>ffct__IsAPICall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is API Call</label>
    <type>Checkbox</type>
</CustomField>