force-app/main/default/objects/ffct__Bundle_Provision_State__c/fields/ffct__TargetOrgUsername__c.field-meta.xml
<CustomField>
    <fullName>ffct__TargetOrgUsername__c</fullName>
    <label>TargetOrgUsername</label>
    <length>255</length>
    <type>Text</type>
</CustomField>