force-app/main/default/objects/ffct__Bundle_Provision_State__c/listViews/ffct__All.listView-meta.xml
<ListView>
    <fullName>ffct__All</fullName>
    <columns>NAME</columns>
    <columns>ffct__Complete__c</columns>
    <columns>ffct__Error__c</columns>
    <columns>ffct__Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>